# Hermes-maces

./: .gitignore  .repair-complete  CHANGELOG.md  LICENSE  README-HARDENING.md  README.md  SUBCONSCIOUS.md  __init__.py  after-install.md  config.example.yaml  config.yaml  plugin.yaml  pyproject.toml
.github/: REPAIR_BASELINE.md
.github/workflows/: test.yml
.repair/: payload.part.02  payload.part.03
docs/: ARCHITECTURE.md  DATA_MODEL.md  INSTALLATION.md  INSTALLATION_GATE.md  JOURNAL.md  PRIVACY_TESTING.md  PROFILE_ISOLATION.md  PROVIDERS.md  PUBLIC_BETA_VALIDATION.md  PUBLIC_RELEASE_GUIDE.md  ROLL_OUT.md  SECURITY.md
docs/releases/: v1.2.0.md
scripts/: check_public_boundary.py
src/: __init__.py
src/maces/: __init__.py  adapters.py  cli.py  engine.py  influence.py  learning.py  models.py  plugin.py  policy.py  secure_store.py  store.py  validation.py
tests/: conftest.py  test_batch1_remediation.py  test_maces.py  test_repair_legacy.py  test_runtime_hardening.py
tests/e2e/: test_plugin_manager.py
