[build-system]
requires = ["setuptools>=69,<81"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-maces"
version = "1.2.0"
description = "Profile-bound subconscious advisory layer for Hermes Agent"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8,<9", "ruff>=0.5,<1", "pyyaml>=6,<7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = ["e2e: requires the real Hermes PluginManager"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E9", "F"]
